--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
 <body style="background-color:#F0F8FF; font-family: verdana;">
-<a href="https://www.w3schools.com">Dumbass this is the way to the homepage.</a>
+<a href="https://therealtrooper.github.io/Trooper-s-site/">Dumbass this is the way to the homepage.</a>
 <center><h1>Welcome to the movies page</h1>
 <img src="movies.png" alt="classics" width="300" height="415">
 <p>This is the part of the website were you see all of the cringe movies that I made with my friends. They are fun to make!</p>
