--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,10 @@
 <h2>My First Movie</h2>
 <p>I made this movie on a random week day just for fun, its about Benrie a cotten ball. THERE WAS A GLITCH
 WITH THE VIDEO EDITOR SO THERE IS LIKE 3 WHOLE MINUTES OF BLACK AFTER THE MOVIE.</p>
-<a href="first_movie.mp4" download>Download the movie here.</a>
+<video width="320" height="240" controls>
+  <source src="first_movie.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 <h2>A pic of Benrie
 <br></br>
 <img src="Benrie.png" alt="ILOVEHIM" width="500" height="415">
