--- a/index.htm
+++ b/index.htm
@@ -16,3 +16,9 @@ WITH THE VIDEO EDITOR SO THERE IS LIKE 3 WHOLE MINUTES OF BLACK AFTER THE MOVIE.
 <br></br>
 <img src="Benrie.png" alt="ILOVEHIM" width="500" height="415">
 <hr></hr>
+<h2>Wild east.</h2>
+<p>I found this on my computer, made it with my friend when he came over.
+</p>
+<video width="320" height="240" controls>
+  <source src="wildeast-Compressed with Flexclip.mp4" type="video/mp4">
+  Your browser does not support the video tag.
