--- a/index.htm
+++ b/index.htm
@@ -20,5 +20,5 @@ WITH THE VIDEO EDITOR SO THERE IS LIKE 3 WHOLE MINUTES OF BLACK AFTER THE MOVIE.
 <p>I found this on my computer, made it with my friend when he came over.
 </p>
 <video width="320" height="240" controls>
-  <source src="wildeast-Compressed with Flexclip.mp4" type="video/mp4">
+  <source src="wildeast - Compressed with FlexClip.mp4" type="video/mp4">
   Your browser does not support the video tag.
