--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,13 @@
 <html>
 <body style="background-color:#F0F8FF; font-family: verdana;">
-<a href="https://therealtrooper.github.io/Trooper-s-site/">Dumbass this is the way to the homepage.</a>
+<title>Trooper's Movies.</title>
+  <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Why you stop watching movies? :(">Dumbass this is the way to the homepage.</a>
 <center><h1>Welcome to the movies page</h1>
 <img src="movies.png" alt="classics" width="300" height="415">
-<p>This is the part of the website were you see all of the cringe movies that I made with my friends. They are fun to make!</p>
+<p>This is the part of the website where you see all of the cringe movies that I made with my friends. They are fun to make!</p>
 <hr></hr>
 <h2>My First Movie</h2>
-<p>I made this movie on a random week day just for fun, its about Benrie a cotten ball. THERE WAS A GLITCH
+<p>I made this movie on a random weekday just for fun, it's about Benrie a cotton ball. THERE WAS A GLITCH
 WITH THE VIDEO EDITOR SO THERE IS LIKE 3 WHOLE MINUTES OF BLACK AFTER THE MOVIE.</p>
 <video width="320" height="240" controls>
   <source src="first_movie.mp4" type="video/mp4">
@@ -17,7 +18,7 @@ WITH THE VIDEO EDITOR SO THERE IS LIKE 3 WHOLE MINUTES OF BLACK AFTER THE MOVIE.
 <img src="Benrie.png" alt="ILOVEHIM" width="500" height="415">
 <hr></hr>
 <h2>Wild east.</h2>
-<p>I found this on my computer, made it with my friend when he came over.
+<p>I found this on my computer and made it with my friend when he came over.
 </p>
 <video width="320" height="240" controls>
   <source src="wildeast - Compressed with FlexClip.mp4" type="video/mp4">
