--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <p>I made this movie on a random weekday just for fun, it's about Benrie a cotton ball. THERE WAS A GLITCH
 WITH THE VIDEO EDITOR SO THERE IS LIKE 3 WHOLE MINUTES OF BLACK AFTER THE MOVIE.</p>
 <video width="320" height="240" controls>
-  <source src="first_movie.mp4" type="video/mp4">
+  <source src="first_movie.webm" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 <h2>A pic of Benrie
