--- a/index.htm
+++ b/index.htm
@@ -21,5 +21,6 @@ WITH THE VIDEO EDITOR SO THERE IS LIKE 3 WHOLE MINUTES OF BLACK AFTER THE MOVIE.
 <p>I found this on my computer and made it with my friend when he came over.
 </p>
 <video width="320" height="240" controls>
-  <source src="wildeast - Compressed with FlexClip.mp4" type="video/mp4">
+  <source src="wildeast-Compressed-with-FlexClip_compressed.webm" type="video/webm">
   Your browser does not support the video tag.
+</video>
