--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <html>
 <body style="background-color:#F0F8FF; font-family: verdana;">
 <title>Trooper's Movies.</title>
-  <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Why you stop watching movies? :(">Dumbass this is the way to the homepage.</a>
+  <a href="https://therealtrooper.github.io/Trooper-s-site/" title="Why you stop watching movies? :(">This is the way to the homepage.</a>
 <center><h1>Welcome to the movies page</h1>
 <img src="movies.png" alt="classics" width="300" height="415">
 <p>This is the part of the website where you see all of the cringe movies that I made with my friends. They are fun to make!</p>
@@ -13,7 +13,7 @@ WITH THE VIDEO EDITOR SO THERE IS LIKE 3 WHOLE MINUTES OF BLACK AFTER THE MOVIE.
   <source src="first_movie.webm" type="video/webm">
   Your browser does not support the video tag.
 </video>
-<h2>A pic of Benrie
+<h2>A pic of Benrie</h2>
 <br></br>
 <img src="Benrie.png" alt="ILOVEHIM" width="500" height="415">
 <hr></hr>
